[package]
name = "codimd_display"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.14", features = ["with-uuid-0_8"] }
tokio = "1.47.1"
tera = "1.20.0"
chrono = "0.4.42"
uuid = "0.8.2"
rustc-serialize = "0.3.25"
encoding_rs = "0.8.35"